--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,7 @@
+body {
+  background: var(--main-bg);
+}
+
 .container {
   width: 540px;
   display: flex;
@@ -5,5 +9,4 @@
   justify-content: center;
   gap: var(--spacing-300);
   margin: 0 auto;
-  margin-top: -10rem;
 }
