--- a/src/components/Checkbox/Checkbox.module.css
+++ b/src/components/Checkbox/Checkbox.module.css
@@ -3,7 +3,7 @@
   width: var(--spacing-300);
   height: var(--spacing-300);
   border-radius: 50%;
-  border: 1px solid var(--purple-300);
+  border: 1px solid var(--primary-border);
   cursor: pointer;
 }
 
