--- a/src/main.css
+++ b/src/main.css
@@ -50,6 +50,7 @@ body {
   --font-size-1: 1.125rem;
   --font-size-2: 0.875rem;
   --font-size-3: 0.75rem;
+  --font-size-4: 1.5rem;
   --font-regular: 400;
   --font-bold: 700;
   --font-line-height: 1;
